--- a/package.json
+++ b/package.json
@@ -1,44 +1,36 @@
 {
-	"name": "next-dapp-template",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"@rainbow-me/rainbowkit": "2.0.5",
-		"@t3-oss/env-nextjs": "0.9.2",
-		"@tanstack/react-query": "5.29.0",
-		"class-variance-authority": "0.7.0",
-		"clsx": "2.1.0",
-		"framer-motion": "11.0.25",
-		"jiti": "1.21.0",
-		"lucide-react": "0.365.0",
-		"next": "14.1.4",
-		"next-themes": "0.3.0",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"tailwind-merge": "2.2.2",
-		"tailwindcss-animate": "1.0.7",
-		"viem": "2.9.12",
-		"wagmi": "2.5.19",
-		"zod": "3.22.4",
-		"zustand": "4.5.2"
-	},
-	"devDependencies": {
-		"@innei/prettier": "0.13.0",
-		"@types/node": "20.12.5",
-		"@types/react": "18.2.74",
-		"@types/react-dom": "18.2.24",
-		"autoprefixer": "10.4.19",
-		"eslint": "9.0.0",
-		"eslint-config-next": "14.1.4",
-		"postcss": "8.4.38",
-		"prettier": "3.2.5",
-		"tailwindcss": "3.4.3",
-		"typescript": "5.4.4"
-	}
+  "name": "next-dapp-template",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.0.6",
+    "@tanstack/react-query": "^5.32.1",
+    "next": "14.2.3",
+    "next-themes": "^0.3.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "viem": "^2.9.29",
+    "wagmi": "^2.7.0",
+    "zod": "^3.23.5",
+    "zustand": "^4.5.2"
+  },
+  "devDependencies": {
+    "@innei/prettier": "0.13.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "10.4.19",
+    "eslint": "^9",
+    "eslint-config-next": "^14.2.3",
+    "postcss": "^8",
+    "prettier": "3.2.5",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.4"
+  }
 }
